Update root path

--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MinIO Metrics Viewer</title>
-    <link rel="stylesheet" href="/static/styles.css">
+    <link rel="stylesheet" href="static/styles.css">
 </head>
 <body>
     <h1>📊 MinIO Metrics Viewer</h1>
@@ -53,6 +53,6 @@
         </table>
     </div>
 
-    <script src="/static/app.js"></script>
+    <script src="static/app.js"></script>
 </body>
 </html>
