--- a/static/index.html
+++ b/static/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MinIO Metrics Viewer</title>
+    <base href="/minio-monitor/">
     <link rel="stylesheet" href="static/styles.css">
 </head>
 <body>
